uplift/static/stylesheets/style.css
/* ... */
.colorContain {
  background: #FAFAFA;
}
ul {
  margin: 0;
  padding: 0;
  position: relative;
}
 a {
   text-decoration: none;
 }
.alignLeft {
  position: relative;
}
.alignRight {
  position: absolute;
  right: 0;
  top: 0;
}

/* Header */
header {
  padding-top: 80px;
  height: 24px;
  display: block;
  width: 100%;
  position: relative;
}
header ul {
  display:inline-block;
  height: 24px;
}
header .alignRight {
  top: 80px;
}
header ul li {
  list-style-type: none;
  color: #454545;
  font-size: 18px;
  font-weight: 400;
  display: inline-block;
  margin-left: 20px;
  height: 24px;
  line-height: 26px;
  vertical-align: top;
}
header .alignLeft li:first-of-type span {
  width: 24px;
  height: 24px;
  display: inline-block;
  margin-right: 10px;
  background: url("../resources/tinyAppIcon.svg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  vertical-align: top;
}
header ul li:first-of-type {
  margin-left: 0;
}
header ul li a {
  text-decoration: none;
  color: #FF4771;
}

/* Splash */
.splash {
  padding: 50px 0 30px;
  display: block;
  width: 100%;
  text-align: center;
}
.splash h1 {
  font-weight: 300;
  color: #111;
  font-size: 36px;
  text-align: center;
  display: block;
  margin: 0 0 6px;
  padding: 0;
}
.splash h3 {
  font-weight: 300;
  color: #B1B1B1;
  font-size: 16px;
  text-align: center;
  display: block;
  margin: 0;
  padding: 0;
}

/* Video */
.promoVideoContainer {
  width: 100%;
  height: 338px;
  position: relative;
  display: block;
  border-radius: 6px;
  box-shadow: 0 1px 2px rgba(0,0,0,.05), 0 2px 8px rgba(0,0,0,.08);
  overflow: hidden;
  cursor: pointer;
  margin-bottom: 50px;
  transition: 0.3s all ease;
  -webkit-transition: 0.3s all ease;
  -moz-transition: 0.3s all ease;
  -o-transition: 0.3s all ease;
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -o-user-select: none;
}
.promoVideoContainer:hover {
  box-shadow: 0 6px 12px rgba(0,0,0,.1), 0 2px 4px rgba(0,0,0,.05);
}
#promoVideo {
  width: 100%;
  height: 100%;
  background: #444;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  object-fit: cover;
  -webkit-object-fit: cover;
  -moz-object-fit: cover;
  -o-object-fit: cover;
}
.promoVideoContainer::after {
  content: '';
  width: 100%;
  height: 100%;
  background: rgba(255, 71, 113, .5) url("../resources/playButton.svg");
  background-size: 102px;
  background-repeat: no-repeat;
  background-position: center;
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  transition: 0.15s all ease;
  -webkit-transition: 0.15s all ease;
  -moz-transition: 0.15s all ease;
  -o-transition: 0.15s all ease;
  opacity: 0;
  border-radius: 6px;
}
.promoVideoContainer.isPaused::after {
  opacity: 1;
}
.promoVideoContainer:hover::after {
  background: rgba(255, 71, 113, .5) url("../resources/playButtonHover.svg");
  background-size: 102px;
  background-repeat: no-repeat;
  background-position: center;
}

.featureSection {
  height: 262px;
  display: block;
  margin-bottom: 40px;
  position: relative;
}
#receive {
  margin-bottom: 0;
  padding-bottom: 50px;
}
.exampleBlock {
  width: 280px;
  height: 262px;
  border-radius: 6px;
  overflow: hidden;
  box-shadow: 0 1px 2px rgba(0,0,0,.05), 0 2px 8px rgba(0,0,0,.08);
  background: white;
  position: absolute;
  top: 0;
}
#send .exampleBlock {
  right: 0;
}
#receive .exampleBlock {
  left: 0;
}
section .infoBlock {
  width: 280px;
  display: block;
  position: absolute;
  top: 50%;
  transform: translateY(calc(-50% - 28px));
  -webkit-transform: translateY(calc(-50% - 28px));
  -moz-transform: translateY(calc(-50% - 28px));
  -o-transform: translateY(calc(-50% - 28px));
}
#send .infoBlock {
  left: 0;
}
#receive .infoBlock {
  right: 0;
}
section .infoBlock h4 {
  font-size: 36px;
  font-weight: 300;
  color: #FF4771;
  margin: 0 0 2px;
  text-align: left;
  display: block;
}
section .infoBlock p {
  font-size: 18px;
  font-weight: 300;
  color: #A5A5A5;
  margin: 0;
  text-align: left;
  display: block;
  line-height: 25px;
}

/* Send example block */
.messageSent .timmyBlock {
  opacity: 0;
  transform: scale(0.8) translateY(-20%);
  -webkit-transform: scale(0.8) translateY(-20%);
  -moz-transform: scale(0.8) translateY(-20%);
  -o-transform: scale(0.8) translateY(-20%);
}
.timmyBlock {
  transition: 0.2s all ease;
  -webkit-transition: 0.2s all ease;
  -moz-transition: 0.2s all ease;
  -o-transition: 0.2s all ease;
}
.hugoBlock {
  opacity: 0;
  transform: scale(0.8) translateY(20%);
  -webkit-transform: scale(0.8) translateY(20%);
  -moz-transform: scale(0.8) translateY(20%);
  -o-transform: scale(0.8) translateY(20%);
  transition: 0.3s all ease;
  -webkit-transition: 0.3s all ease;
  -moz-transition: 0.3s all ease;
  -o-transition: 0.3s all ease;
  transition-delay: 0.2s;
  -webkit-transition-delay: 0.2s;
  -moz-transition-delay: 0.2s;
  -o-transition-delay: 0.2s;
}
.messageSent .hugoBlock {
  opacity: 1;
  transform: scale(1) translateY(0);
  -webkit-transform: scale(1) translateY(0);
  -moz-transform: scale(1) translateY(0);
  -o-transform: scale(1) translateY(0);
}
#send .recipientBlock {
  width: 100%;
  padding: 36px 0;
  position: absolute;
}
#send .recipientBlock .timsFace, #send .recipientBlock .hugosFace {
  width: 80px;
  height: 80px;
  border-radius: 50%;
  overflow: hidden;
  display: block;
  margin: 0 auto 14px;
}
#send .recipientBlock .timsFace {
  background: url("../resources/timsFace.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}
#send .recipientBlock .hugosFace {
  background: url("../resources/hugosFace.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}
#send .recipientBlock h2, #send .recipientBlock p {
  text-align: center;
}
#send .recipientBlock h2 {
  font-weight: 400;
  color: #424242;
  font-size: 20px;
  margin: 0 0 4px;
  padding: 0;
}
/* ... */

